tests/errors/syntax_multiline_template_unclosed_interpolation.dang
pub name = "Ada"
pub bad = ```
hello ${name
```
